fix(<ProductImages />): prevent images from being distorted
This commit fixes a bug where images in the <ProductImages /> component
inside the <ProductInfo /> component can appear somewhat distorted
because of disproportionate width and height. This is done by adding
the 'object-fit: contain' property to the images.

--- a/client/src/components/ProductInfo/ProductImages/ProductImages.module.css
+++ b/client/src/components/ProductInfo/ProductImages/ProductImages.module.css
@@ -11,6 +11,7 @@
     height: auto;
     max-width: 80px;
     max-height: 80px;
+    object-fit: contain;
     opacity: .6;
     transition: 0.5s opacity ease;
     cursor: pointer;
